# python-profiling-helpers

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: deploy_package.yml  test_package.yml
src/profiling_helpers/: __init__.py  profiling.py  save_targets.py
tests/: test_profiling.py
