[metadata]
name = profiling-helpers
version = 0.1.0
author = Fabian Nobis
author_email = fabiannobis@gmx.de
url = https://github.com/NobisIndustries/python-profiling-helpers
description = A small utility library that wraps cProfile and makes it easy to debug performance problems in your Python code.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = cProfile, profiling, performance
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/NobisIndustries/python-profiling-helpers/issues

[options]
package_dir =
    = src
python_requires = >=3.7
install_requires =
    snakeviz>=2.1.1

[options.extras_require]
dev =
    pre-commit
    build
    pytest

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
